[package]
name = "yeditor"
version = "0.1.0"
authors = ["Will <xuwaters@gmail.com>"]
edition = "2018"

[dependencies]
ycommon = { path = "../ycommon" }

structopt = "0.2.15"
config = "0.9.3"
futures = "0.1.27"
dotenv = "0.14.1"
log = "0.4.6"
env_logger = "0.6.1"
lazy_static = "1.3.0"
actix = "0.7.9"
actix-web = { version = "0.7.19", features = ["ssl", "brotli"] }
juniper = { version = "0.12.0", features = ["chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
bcrypt = "0.4.0"
failure = "0.1.5"
toml = "0.5.1"
url = "1.7.2"
r2d2 = "0.8.4"
openssl = "0.10.23"
num_cpus = "1.10.0"
uuid = "0.7.4"
rand = "0.6.5"
nix = "0.14.0"
redis = "0.10.0"
base-x = "0.2.4"
flate2 = "1.0.7"
ropey = "1.0.1"
oauth2 = "1.3.0"
github-rs = { version = "0.7.0", default-features = false, features = ["rust-native-tls"] }
# reqwest = "0.9.17"
