[package]
name = "yscript"
version = "0.1.0"
authors = ["Will <xuwaters@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
log = "0.4.6"
env_logger = "0.6.1"
failure = "0.1.5"
lazy_static = "1.3.0"

serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"

tempfile = "3.0.7"
regex = "1.1.6"
